--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <link type="text/css" rel="stylesheet" href="style2.css">
+  <link type="text/css" rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <head>
     <meta charset="utf-8">
