add basic RWD setting

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
   <link type="text/css" rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>welcome to Gina's site</title>
   </head>
   <body>
     <div id="nav">
       <div class="container">
-        <ul class="manu">
+        <button type="button" class="menu-button">
+          三
+        </button>
+        <input type="checkbox" class="menu-button-checkbox">
+        <ul class="menu">
           <li><a href="#about">Who am I</a></li>
           <li><a href="#my-work">My work</a></li>
           <li><a href="#contact-me">Contact me</a></li>
